fix display issues on small screens

--- a/src/main.scss
+++ b/src/main.scss
@@ -17,7 +17,6 @@ main {
   &-display {
     flex: 1;
     overflow-y: scroll;
-    min-height: 100%;
     padding: 0.25rem;
 
     &-card {
@@ -58,5 +57,6 @@ main {
   .browser,
   .translation {
     flex-direction: column;
+    overflow: auto;
   }
 }
